# two-party-musig2-eddsa

./: .gitignore  Cargo.toml  README.md  docs_header.html
.cargo/: config.toml
.github/workflows/: test.yml
examples/: signing.rs
src/: aggregate.rs  common.rs  derive.rs  keypair.rs  lib.rs  partialsig.rs  privatepartialnonces.rs  protocol.rs  publicpartialnonces.rs  serde.rs  signature.rs
src/kms/: LICENSE
src/kms/src/: lib.rs
