[package]
name = "two-party-musig2-eddsa"
description = "Two-party EdDSA signatures based on Musig2."
version = "0.1.2"
edition = "2021"
authors = [
    "Shalev Keren <shalev@zengo.com>"
]
exclude = [".gitignore", ".github/"]

[dependencies]
curve25519-dalek = {version = "3"}
rand = "0.8"
sha2 = "0.9"
serde = { version = "1.0", optional = true }

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand_xoshiro = "0.6.0"
hex = "0.4.3"
serde_test = "1"