[package]
name = "two-party-musig2-eddsa"
description = "Two-party EdDSA signatures based on Musig2 with HD key derivation"
version = "0.1.3"
edition = "2021"
authors = [
    "Shalev Keren <shalev@zengo.com>",
    "Elichai Turkel <elichai@zengo.com",
    "Matan Hamilis <matan.hamilis@gmail.com>"
]
exclude = [".gitignore", ".github/"]

[dependencies]
curve25519-dalek = {version = "3"}
rand = "0.8"
sha2 = "0.9"
serde = { version = "1.0", optional = true }
blake2 = "0.10"

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand_xoshiro = "0.6.0"
hex = "0.4.3"
serde_test = "1"

[build]
rustdocflags = [ "--html-in-header", "docs_header.html" ]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs_header.html", "--cfg", "docsrs" ]